// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchScannedHostDetails: fetchScannedHostDetails 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Account",
      ],
      "_key": "qualys-account:local-integration-instance",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "portal": Object {
              "Portal-Version": Object {
                "AV2-VERSION": "0.1.0",
                "CA-VERSION": "3.13.1.0",
                "CERTVIEW-VERSION": "2.11.0.0-16",
                "CLOUDVIEW-VERSION": "1.25.1.0-34",
                "CM-VERSION": "1.37.0.0",
                "CS-VERSION": "1.20.0-43",
                "FIM-VERSION": "3.6.0.0-75",
                "ICS-VERSION": "1.0.1.0-31",
                "IOC-VERSION": "2.2.2-23",
                "ITAM-VERSION": "2.13.0.0-4",
                "MDS-VERSION": "2.19.3.0-1",
                "OCA-VERSION": "1.8.0.2",
                "PM-VERSION": "2.0.0.0-146",
                "PS-VERSION": "1.5.3.2-9",
                "PortalApplication-VERSION": "3.13.1.0-14 OFFICIAL #84 (2022-12-08T10:26:21Z)",
                "QGS-VERSION": "1.4.0-12",
                "QUESTIONNAIRE-VERSION": "2.33.1.0",
                "QUESTIONNAIRE__V2-VERSION": "1.21.1.0",
                "QWEB__PC-VERSION": "1.1.2-13",
                "QWEB__VM-VERSION": "2.13.1-1",
                "SECURITY__ANALYTICS-VERSION": "1.0.6",
                "SEM-VERSION": "1.5.0-0",
                "SM-VERSION": "1.5.0.0-55",
                "SSC-VERSION": "1.7.0.1",
                "THREAT__PROTECT-VERSION": "1.8.1",
                "UD-VERSION": "1.3.0-21",
                "WAF-VERSION": "2.13.8.0",
                "WAF__V3-VERSION": "3.0.4.0",
                "WAS-VERSION": "1.5.0.0-4",
              },
              "QWeb-Version": Object {
                "SCANNER-VERSION": "12.12.38-1",
                "VULNSIGS-VERSION": "2.5.667-2",
                "WEB-VERSION": "10.20.5.0-2",
              },
            },
          },
        },
      ],
      "_type": "qualys_account",
      "createdOn": undefined,
      "displayName": "Qualys - Local Integration",
      "name": "Qualys - Local Integration",
    },
    Object {
      "_class": Array [
        "Service",
      ],
      "_key": "qualys-service:was",
      "_rawData": Array [],
      "_type": "qualys_web_app_scanner",
      "category": Array [
        "software",
        "other",
      ],
      "createdOn": undefined,
      "description": "Automated Web Application Security Assessment and Reporting",
      "displayName": "Qualys Web Application Scanner",
      "function": Array [
        "DAST",
      ],
      "name": "Qualys Web Application Scanner",
      "updatedOn": undefined,
      "version": "1.5.0.0-4",
    },
    Object {
      "_class": Array [
        "Service",
      ],
      "_key": "qualys-service:vmdr",
      "_rawData": Array [],
      "_type": "qualys_vulnerability_manager",
      "category": Array [
        "software",
        "other",
      ],
      "createdOn": undefined,
      "description": "Detect, prioritize and remediate vulnerabilities, and monitor using dashboards.",
      "displayName": "Qualys Vulnerability Manager",
      "function": Array [
        "vulnerability-management",
      ],
      "name": "Qualys Vulnerability Manager",
      "updatedOn": undefined,
      "version": undefined,
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "qualys-account:local-integration-instance",
      "_key": "qualys-account:local-integration-instance|has|qualys-service:was",
      "_toEntityKey": "qualys-service:was",
      "_type": "qualys_account_has_web_app_scanner",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "qualys-account:local-integration-instance",
      "_key": "qualys-account:local-integration-instance|has|qualys-service:vmdr",
      "_toEntityKey": "qualys-service:vmdr",
      "_type": "qualys_account_has_vulnerability_manager",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "qualys_account",
    "qualys_web_app_scanner",
    "qualys_vulnerability_manager",
    "qualys_account_has_web_app_scanner",
    "qualys_account_has_vulnerability_manager",
  ],
  "numCollectedEntities": 3,
  "numCollectedRelationships": 2,
}
`;

exports[`fetchScannedHostFindings: fetchScannedHostFindings 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Account",
      ],
      "_key": "qualys-account:local-integration-instance",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "portal": undefined,
          },
        },
      ],
      "_type": "qualys_account",
      "createdOn": undefined,
      "displayName": "Qualys - Local Integration",
      "name": "Qualys - Local Integration",
    },
    Object {
      "_class": Array [
        "Service",
      ],
      "_key": "qualys-service:was",
      "_rawData": Array [],
      "_type": "qualys_web_app_scanner",
      "category": Array [
        "software",
        "other",
      ],
      "createdOn": undefined,
      "description": "Automated Web Application Security Assessment and Reporting",
      "displayName": "Qualys Web Application Scanner",
      "function": Array [
        "DAST",
      ],
      "name": "Qualys Web Application Scanner",
      "updatedOn": undefined,
      "version": undefined,
    },
    Object {
      "_class": Array [
        "Service",
      ],
      "_key": "qualys-service:vmdr",
      "_rawData": Array [],
      "_type": "qualys_vulnerability_manager",
      "category": Array [
        "software",
        "other",
      ],
      "createdOn": undefined,
      "description": "Detect, prioritize and remediate vulnerabilities, and monitor using dashboards.",
      "displayName": "Qualys Vulnerability Manager",
      "function": Array [
        "vulnerability-management",
      ],
      "name": "Qualys Vulnerability Manager",
      "updatedOn": undefined,
      "version": undefined,
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "qualys-account:local-integration-instance",
      "_key": "qualys-account:local-integration-instance|has|qualys-service:was",
      "_toEntityKey": "qualys-service:was",
      "_type": "qualys_account_has_web_app_scanner",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "qualys-account:local-integration-instance",
      "_key": "qualys-account:local-integration-instance|has|qualys-service:vmdr",
      "_toEntityKey": "qualys-service:vmdr",
      "_type": "qualys_account_has_vulnerability_manager",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "qualys_account",
    "qualys_web_app_scanner",
    "qualys_vulnerability_manager",
    "qualys_account_has_web_app_scanner",
    "qualys_account_has_vulnerability_manager",
  ],
  "numCollectedEntities": 3,
  "numCollectedRelationships": 2,
}
`;
